@@ -3,6 +3,7 @@
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-python): Add
 	python_generate_wrapper_scripts and python_set_active_version
 	functions
+	(ebuild-mode-keywords-qt4-build): Add qt4-build eclass
 
 2009-12-16  Christian Faulhammer  <fauli@gentoo.org>
 
